<resources>
    <string name="app_name">ZxingScanApplication</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="scan_barcode_with_request_code">Scan Barcode with customized request code</string>
    <string name="any_orientation">1D Any Orientation</string>
    <string name="scan_from_fragment">Scan from fragment</string>
    <string name="front_camera">Front Camera</string>
    <string name="custom_activity">Continuous Scan</string>
    <string name="toolbar_activity">Activity with Toolbar</string>
    <string name="custom_scanner">Custom Scanner Activity</string>
    <string name="scanner_with_margin">Scanner with Margin</string>
    <string name="scanner_with_timeout">Finish Scan in 8 Seconds</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <string name="title_activity_tabbed_scanning">Tabbed Scanning</string>
    <string name="tabs">Tabs</string>
    <string name="about">About</string>

</resources>