<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="scanBarcode"
            android:text="@string/scan_barcode" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="scanPDF417"
            android:text="Scan PDF417" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="scanBarcodeInverted"
            android:text="Scan Inverted" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="scanMixedBarcodes"
            android:text="Scan Normal and Inverted" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="scanBarcodeCustomLayout"
            android:text="@string/any_orientation" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="scanBarcodeFrontCamera"
            android:text="@string/front_camera" />

        <fragment
            android:id="@+id/fragment_scan"
            android:name="com.androdevdk.zxingscanapplication.MainActivity$ScanFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_scan" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="scanContinuous"
            android:text="@string/custom_activity" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="scanToolbar"
            android:text="@string/toolbar_activity" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="scanCustomScanner"
            android:text="@string/custom_scanner" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="scanMarginScanner"
            android:text="@string/scanner_with_margin" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="scanWithTimeout"
            android:text="@string/scanner_with_timeout" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="tabs"
            android:text="@string/tabs" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="about"
            android:text="@string/about" />


    </LinearLayout>


</ScrollView>
